<resources>
    <string name="app_name">XPDroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_crear_gasto">Crear Gasto!</string>
    <string name="action_crear_gasto_favorito">Crear Gasto Favorito!</string>
    <string name="action_crear_gasto_programable">Crear Gasto Programable!</string>
    <string name="action_crear_presupuesto">Crear Presupuesto de Gastos!</string>
    <string name="action_crear_categoria">Crear Categoria!</string>
    <string name="action_crear_recordatorio">Crear Recordatorio!</string>
    <string name="action_ver_historial">Buscar mas Gastos!</string>
    <string name="gasto_guardado_mensaje">Gasto guardado exitosamente!</string>
    <string name="gasto_programado_mensaje">Gasto programado exitosamente!</string>
    <string name="gasto_eliminado_mensaje">Gasto eliminado exitosamente!</string>
    <string name="gasto_actualizado_mensaje">Gasto actualizado exitosamente!</string>
    <string name="gasto_favorito_guardado_mensaje">Favorito guardado exitosamente!</string>
    <string name="favorito_eliminado_mensaje">Favorito eliminado exitosamente!</string>
    <string name="favorito_actualizado_mensaje">Favorito actualizado exitosamente!</string>
    <string name="categoria_guardado_mensaje">Categoria guardada exitosamente!</string>
    <string name="presupuesto_actualizado_mensaje">Presupuesto actualizado exitosamente!</string>
    <string name="presupuesto_guardado_mensaje">Presupuesto guardado exitosamente!</string>
    <string name="presupuesto_eliminado_mensaje">Presupuesto eliminado exitosamente!</string>
    <string name="action_settings">Settings</string>

    <string name="navdrawitem1">Inicio</string>
    <string name="navdrawitem2">Historial</string>
    <string name="navdrawitem3">Favoritos</string>
    <string name="navdrawitem4">Programables</string>
    <string name="navdrawitem5">Presupuesto</string>
    <string name="navdrawitem6">Categorías</string>
    <string name="navdrawitem7">Totales</string>
    <string name="navdrawitem8">Copia de Seguridad</string>
    <string name="navdrawitem9">Acerca de</string>

    <string name="title_activity_crear_categoria">Crear Categoria</string>
    <string name="title_activity_crear_gasto">Crear Gasto</string>
    <string name="title_activity_gastos_favoritos">Gastos Favoritos</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_desde">Fecha Desde:</string>
    <string name="fecha_hasta">Fecha Hasta:</string>
    <string name="calendario">Calendario</string>
    <string name="boton_mostrar_mas_gastos">Mostrar mas Gastos</string>
    <string name="anio">Año</string>

    <string name="esta_semana">Esta semana</string>
    <string name="campo_obligatorio">Campo obligatorio!</string>
    <string name="importe_incorrecto">Ingrese un importe válido</string>
    <string name="inicio">Esta es la pagina de Inicio</string>
    <string name="gastos_favoritos">Esta es la pagina de Gastos Favoritos</string>
    <string name="gastos_programables">Esta es la pagina de Gastos Programables</string>
    <string name="presupuesto">Esta es la pagina de Presupuesto</string>
    <string name="recordatorios">Esta es la pagina de Recordatorios</string>
    <string name="ayuda">Esta es la pagina de Ayuda</string>
    <string name="descripcion">Descripción</string>
    <string name="nombre">Nombre</string>
    <string name="categoria">Categoría</string>
    <string name="importe">Importe</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_crear_gasto_programable">Crear Gasto Programable</string>
    <string name="reloj">Reloj</string>
    <string name="horario">Horario</string>
    <string name="repeticion">Repetición</string>
    <string name="title_activity_crear_gasto_favorito">Crear Gasto Favorito</string>
    <string name="title_activity_crear_presupuesto">Crear Presupuesto</string>
    <string name="duracion">Duración</string>
    <string name="title_activity_crear_recordatorio">Crear Recordatorio</string>
    <string name="title_activity_xpdroid">Actividad Base de XPDroid</string>
    <string name="historial_gastos_titulo">Historial de Gastos</string>
    <string name="gastos_favoritos_titulo">Gastos Favoritos:</string>
    <string name="ver_mas_gastos_titulo">Buscar Gastos Realizados</string>
    <string name="presupuesto_titulo">Presupuesto de Gastos</string>

    <string name="boton_buscar">Buscar</string>

    <string name="categoria0">Cualquiera</string>
    <string name="categoria9">Transportes</string>
    <string name="categoria2">Alimentos</string>
    <string name="categoria8">Supermercado</string>
    <string name="categoria1">Varios</string>
    <string name="categoria7">Servicios</string>
    <string name="categoria4">Impuestos</string>
    <string name="categoria3">Farmacia</string>
    <string name="categoria5">Indumentaria</string>
    <string name="categoria6">Ocio</string>

    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="diario">Diario</string>
    <string name="semanal">Semanal</string>
    <string name="mensual">Mensual</string>
    <string name="anual">Anual</string>
    <string name="title_activity_historial_gastos_completo">Búsqueda de Gastos Realizados</string>
    <string name="title_activity_tratar_gasto">Tratar Gasto</string>
    <string name="title_activity_editar_gasto">Editar Gasto</string>
    <string name="title_activity_editar_presupuesto">Editar Presupuesto</string>
    <string name="title_activity_editar_gasto_programable">Editar Gasto Programable</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="title_activity_editar_gasto_favorito">Editar Gasto Favorito</string>
    <string name="title_activity_tratar_gasto_favorito">Tratar Gasto Favorito</string>
    <string name="title_activity_tratar_presupuesto">Tratar Presupuesto</string>
    <string name="title_activity_tratar_gasto_programable">TratarGastoProgramableActivity</string>
    <string name="programado_actualizado_mensaje">Gasto Programado Actualizado</string>
    <string name="programado_eliminado_mensaje">Gasto Programado Eliminado</string>

    <string name="info_limite_presupuesto_alcanzado">Límite de presupuesto alcanzado</string>
    <string name="presupuesto_existente">Presupuesto %1$s existente</string>
    <string name="no_hay_favoritos">No hay Favoritos grabados</string>
    <string name="no_hay_gastos">No hay Gastos grabados</string>
    <string name="no_hay_programables">No hay Gastos Programables grabados</string>
    <string name="no_hay_categorias">No hay Categorias grabadas</string>
    <string name="no_hay_presupuesto">No hay Presupuestos grabados</string>
    <string name="mis_favoritos">Mis Favoritos</string>
    <string name="alerta_presupuesto">Presupuesto excedido!</string>
    <string name="gastos_programados_titulo">Gastos Programados:</string>
    <string name="seleccione_total_predeterminado">Seleccione la opción predeterminada para ver en Inicio</string>

    <string name="boton_respaldar">Copia de\n Seguridad</string>
    <string name="boton_restaurar">Restaurar\n Copia</string>
    <string name="backup_exitoso">Copia de Seguridad realizada con éxito</string>
    <string name="restore_exitoso">Copia restaurada con éxito</string>
    <string name="info_google_drive_respaldar">Utilice Google Drive para realizar una copia de seguridad o restaurar una copia anterior</string>
</resources>
