<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.funebunny.xpdroid.main.ui.fragment.TotalesItemFragment"
    android:orientation="vertical"
    android:id="@+id/fragment_totalesitem_list_ll_main">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/fragment_totalesitem_list_rb_diario"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="actualizarTotalPredeterminado" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/fragment_totalesitem_list_rb_semanal"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="actualizarTotalPredeterminado" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/fragment_totalesitem_list_rb_mensual"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="actualizarTotalPredeterminado" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/fragment_totalesitem_list_rb_anual"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="actualizarTotalPredeterminado" />

    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fragment_totalesitem_list_ll_separador"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/seleccione_total_predeterminado"
            android:id="@+id/fragment_totalesitem_list_tv_info"
            android:layout_gravity="center"
            android:gravity="center_vertical|center|center_horizontal" />

    </LinearLayout>
</LinearLayout>
