...
        android:visibility="gone">
    </RelativeLayout>

    <ExpandableListView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/fragment_main_el_alerta_presupuesto"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/fragment_main_tv_alerta_presupuesto"
...
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />

        <GridView
            android:id="@+id/fragment_main_gv_favoritos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="0dp"
...
